fixes uneven top and bottom padding for deafult footer

--- a/src/base/styles/_layout.scss
+++ b/src/base/styles/_layout.scss
@@ -18,7 +18,8 @@
   flex-direction: column;
   align-items: center;
   z-index: 0;
-  padding-bottom: 125px;
+  padding-top: 15px;
+  padding-bottom: 35px;
 }
 
 #footer-upper, #footer-lower
